--- a/healthome/src/App.scss
+++ b/healthome/src/App.scss
@@ -35,7 +35,7 @@ nav{
     cursor: pointer;
     align-items: left;
     padding-left: 20px;
-    text-shadow: 2px 0 $corBordaTitulo, -2px 0 $corBordaTitulo, 0 2px $corBordaTitulo, 0 -2px $corBordaTitulo, 1px 1px $corBordaTitulo, -1px -1px $corBordaTitulo, 1px -1px $corBordaTitulo, -1px 1px $corBordaTitulo;
+    text-shadow: 2px 0 $corBordaTitulo, -2px 0 $corBordaTitulo, 0 2px $corBordaTitulo, 0 -2px $corBordaTitulo, 1px 1px $corBordaTitulo, -1px -1px $corBordaTitulo, 1px -1px $corBordaTitulo, -1px 1px $corBordaTitulo;  
 }
 
 .navegacaoHeader{
@@ -71,3 +71,21 @@ nav{
         cursor: pointer;
     }
 }
+
+footer{
+    min-height: 80px;
+    align-items: center;
+    display: flex;
+    color: darkred;
+    justify-content:center;
+    font-weight: 700;
+    font-size: 16px;
+    border-top: 2px solid rgb(175, 175, 175);
+}
+
+.textoJustificado2{
+    font-weight: 600;
+    font-size: 18px;
+    color: darkred;
+}
+
